<resources>
    <string name="app_name">To-do List</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_empty_email_password">Email and Password must not be empty!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="no_account">Don\'t have an account yet? Register here</string>
    <string name="account_register">Account Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account? Log in</string>
    <string name="login_successful">Login successful</string>
    <string name="register_successful">Registration successful</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registration failed</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>